--- a/lifecoding/index.html
+++ b/lifecoding/index.html
@@ -146,8 +146,25 @@ a:hover{
 <h2 id ="objection">objection</h2>
 
 <p>
-    잘 정리하기 위한 도구! 
+    잘 정리하기 위한 도구!
+    순서 대로 아니더라도 , 저장할수있다.
+    꺼낼 필요가 있기에 수납상자에 넣을때, 사물에 대한 이름이 있는 정리정돈 상자
+
+
 </p>
+   <script>
+     var coworkers = {
+        "programer" : "egoing",
+        "designer" : "kevin"
+
+
+     }; //오브젝트 리터럴, 
+
+     document.write("programer:"+coworkers.programer);
+
+     coworkers.bookkeeper = "moon";
+
+   </script>
 
 
       </div>
